@@ -113,6 +113,11 @@ CREATE TABLE ART_SETTINGS
 	ERROR_EMAIL_SUPPRESS_AFTER VARCHAR(30),
 	ERROR_EMAIL_EXPIRE_AFTER VARCHAR(20),
 	ERROR_EMAIL_DIGEST_FREQUENCY VARCHAR(20),
+	PASSWORD_MIN_LENGTH INTEGER,
+	PASSWORD_MIN_LOWERCASE INTEGER,
+	PASSWORD_MIN_UPPERCASE INTEGER,
+	PASSWORD_MIN_NUMERIC INTEGER,
+	PASSWORD_MIN_SPECIAL INTEGER,
 	UPDATE_DATE TIMESTAMP,
 	UPDATED_BY VARCHAR(50)
 );
