@@ -132,6 +132,11 @@ public class SettingsService {
 			settings.setErrorNotificationSuppressAfter(rs.getString("ERROR_EMAIL_SUPPRESS_AFTER"));
 			settings.setErrorNotificationExpireAfter(rs.getString("ERROR_EMAIL_EXPIRE_AFTER"));
 			settings.setErrorNotificationDigestFrequency(rs.getString("ERROR_EMAIL_DIGEST_FREQUENCY"));
+			settings.setPasswordMinLength(rs.getInt("PASSWORD_MIN_LENGTH"));
+			settings.setPasswordMinLowercase(rs.getInt("PASSWORD_MIN_LOWERCASE"));
+			settings.setPasswordMinUppercase(rs.getInt("PASSWORD_MIN_UPPERCASE"));
+			settings.setPasswordMinNumeric(rs.getInt("PASSWORD_MIN_NUMERIC"));
+			settings.setPasswordMinSpecial(rs.getInt("PASSWORD_MIN_SPECIAL"));
 			settings.setUpdateDate(rs.getTimestamp("UPDATE_DATE"));
 			settings.setUpdatedBy(rs.getString("UPDATED_BY"));
 
@@ -198,8 +203,10 @@ public class SettingsService {
 				+ " ERROR_EMAIL_SUBJECT_PATTERN, ERROR_EMAIL_LEVEL,"
 				+ " ERROR_EMAIL_LOGGER, ERROR_EMAIL_SUPPRESS_AFTER,"
 				+ " ERROR_EMAIL_EXPIRE_AFTER, ERROR_EMAIL_DIGEST_FREQUENCY,"
+				+ " PASSWORD_MIN_LENGTH, PASSWORD_MIN_LOWERCASE, PASSWORD_MIN_UPPERCASE,"
+				+ " PASSWORD_MIN_NUMERIC, PASSWORD_MIN_SPECIAL,"
 				+ " UPDATE_DATE, UPDATED_BY)"
-				+ " VALUES(" + StringUtils.repeat("?", ",", 54) + ")";
+				+ " VALUES(" + StringUtils.repeat("?", ",", 59) + ")";
 
 		Object[] values = {
 			settings.getSmtpServer(),
@@ -254,6 +261,11 @@ public class SettingsService {
 			settings.getErrorNotificationSuppressAfter(),
 			settings.getErrorNotificationExpireAfter(),
 			settings.getErrorNotificationDigestFrequency(),
+			settings.getPasswordMinLength(),
+			settings.getPasswordMinLowercase(),
+			settings.getPasswordMinUppercase(),
+			settings.getPasswordMinNumeric(),
+			settings.getPasswordMinSpecial(),
 			DatabaseUtils.getCurrentTimeAsSqlTimestamp(),
 			actionUser.getUsername()
 		};
