@@ -879,6 +879,11 @@ settings.label.maxRowsDefault                 = Default Max Rows
 settings.label.maxRowsSpecific                = Specific Max Rows
 settings.label.maxRunningReports              = Max Running Reports
 settings.label.mondrianCacheExpiryPeriod      = Mondrian Cache Expiry Period
+settings.label.passwordMinLength              = Minimum Password Length
+settings.label.passwordMinLowercase           = Minimum Lowercase Characters
+settings.label.passwordMinNumeric             = Minimum Numeric Characters
+settings.label.passwordMinSpecial             = Minimum Special Characters
+settings.label.passwordMinUppercase           = Minimum Uppercase Characters
 settings.label.pdfFontDirectory               = PDF Font Directory
 settings.label.pdfFontEmbedded                = PDF Font Embedded
 settings.label.pdfFontEncoding                = PDF Font Encoding
@@ -907,6 +912,7 @@ settings.text.authentication                  = Authentication
 settings.text.errorNotification               = Error Notification
 settings.text.general                         = General
 settings.text.maxRows                         = Max Rows
+settings.text.passwordPolicy                  = Password Policy
 
 smtpServers.label.from              = From
 smtpServers.message.linkedJobsExist = Cannot delete record. The following jobs use this smtp server
