@@ -853,6 +853,11 @@ settings.label.maxRowsDefault                 = Idadi kubwa ya safu (msingi)
 settings.label.maxRowsSpecific                = Idadi kubwa ya safu (maalum)
 settings.label.maxRunningReports              = Idadi kubwa ya ripoti zinazokimbia
 settings.label.mondrianCacheExpiryPeriod      = Masaa hadi kache ya mondrian itakapofutwa kiotomatiki
+settings.label.passwordMinLength              = Kiwango cha chini cha urefu wa nywila
+settings.label.passwordMinLowercase           = Kiwango cha chini cha herufi ndogo
+settings.label.passwordMinNumeric             = Kiwango cha chini cha nambari
+settings.label.passwordMinSpecial             = Kiwango cha chini cha vibambo spesheli
+settings.label.passwordMinUppercase           = Kiwango cha chini cha herufi kubwa
 settings.label.pdfFontDirectory               = Saraka iliyo na fonti zitakazotumika kwa pdf
 settings.label.pdfFontEmbedded                = Kama kupachika fonti kwenye pdf
 settings.label.pdfFontEncoding                = Usimbaji wa fonti itakayotumika kwa pdf
@@ -881,6 +886,7 @@ settings.text.authentication                  = Uhalalishaji
 settings.text.errorNotification               = Taarifa kuhusu hitilafu
 settings.text.general                         = Jumla
 settings.text.maxRows                         = Idadi kubwa ya safu
+settings.text.passwordPolicy                  = Kanuni za nywila
 
 smtpServers.label.from              = Kutoka
 smtpServers.message.linkedJobsExist = Kumbukumbu haiwezi kufutwa. Kazi zifuatazo zinatumia seva ya smtp hii
